<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">DankChat</string>
    <string name="app_name_dank">DankChat (Dank)</string>
    <string name="send_hint">Send a message</string>
    <string name="login">Login</string>
    <string name="reload_emotes">Reload emotes</string>
    <string name="reconnect">Reconnect</string>
    <string name="clear_chat">Clear chat</string>
    <string name="add_dialog_title">Add channel</string>
    <string name="edit_dialog_title">Rename channel</string>
    <string name="dialog_ok">OK</string>
    <string name="save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="error_dialog_copy">Copy</string>
    <string name="error_dialog_title">Caught exception: %1$s</string>
    <string name="add_channel">Add channel</string>
    <string name="add_channels">Add channels</string>
    <string name="manage_channels">Manage channels</string>
    <string name="report_channel">Report channel</string>
    <string name="block_channel">Block channel</string>
    <string name="channel">Channel</string>
    <string name="open_channel">Open channel</string>
    <string name="remove_channel">Remove channel</string>
    <string name="channel_blocked_message">Channel blocked</string>
    <string name="no_channels_added">No channels added</string>
    <string name="no_channels_added_body">Add a channel to start chatting</string>
    <string name="enable_channel_notifications">Enable background notifications for %1$s</string>
    <string name="disable_channel_notifications">Disable background notifications for %1$s</string>
    <string name="channel_background_notifications">Background notifications</string>
    <string name="confirm_logout_title">Confirm logout</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="confirm_logout_question">Log out?</string>
    <string name="confirm_logout_positive_button">Logout</string>
    <string name="upload_media">Upload media</string>
    <string name="take_picture">Take picture</string>
    <string name="record_video">Record video</string>
    <string name="choose_media">Choose existing media</string>
    <string name="resume_scroll">Resume scroll</string>
    <string name="uploading_image">Uploading file</string>
    <string name="settings">Settings</string>
    <string name="external_upload_disclaimer">External hosting provided by %1$s, use at your own risk.</string>
    <string name="nuuls_upload_title">Custom media upload</string>
    <string name="snackbar_message_copied">Message copied</string>
    <string name="snackbar_message_id_copied">Message id copied</string>
    <string name="snackbar_link_copied">Link copied</string>
    <string name="snackbar_error_copied">Error information copied</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_title">FeelsDankMan</string>
    <string name="notification_message">DankChat running in the background</string>
    <string name="emote_menu_hint">Open the emote menu</string>
    <string name="no_recent_emotes">No recent emotes</string>
    <string name="login_title">Login to Twitch.tv</string>
    <string name="hint_connected">Start chatting</string>
    <string name="hint_disconnected">Disconnected</string>
    <string name="hint_not_logged_int">Not logged in</string>
    <string name="hint_replying">Reply</string>
    <string name="hint_announcing">Send announcement</string>
    <string name="notification_message_with_sender" translatable="false">%1$s: %2$s</string>
    <string name="snackbar_login">Logging in as %1$s</string>
    <string name="snackbar_login_failed">Failed to login</string>
    <string name="snackbar_image_uploaded">Copied: %1$s</string>
    <string name="system_message_upload_complete">Upload complete: %1$s</string>
    <string name="snackbar_upload_failed">Error during upload</string>
    <string name="snackbar_upload_failed_cause">Error during upload: %1$s</string>
    <string name="share_upload_label">Upload</string>
    <string name="share_upload_copied">Copied to clipboard</string>
    <string name="share_upload_copy">Copy URL</string>
    <string name="snackbar_retry">Retry</string>
    <string name="snackbar_data_reloaded">Emotes reloaded</string>
    <string name="multi_entry_header_regex">Regex</string>
    <string name="host">Host</string>
    <string name="reset">Reset</string>
    <string name="oauth_token">OAuth token</string>
    <string name="verify_login">Verify &amp; Save</string>
    <string name="custom_login_hint">Only Client IDs that work with Twitch\'s Helix API are supported</string>
    <string name="custom_login_show_scopes">Show required scopes</string>
    <string name="preference_timestamp_title">Show timestamps</string>
    <string name="preference_timestamp_key" translatable="false">show_timestamp</string>
    <string name="preference_mention_format_title">Mention format</string>
    <string name="preference_mention_format_key" translatable="false">mention_format</string>
    <string name="preference_roomstate_key" translatable="false">show_roomstate</string>
    <string name="preference_roomstate_title">Show chat modes information</string>
    <string name="preference_roomstate_summary">Displays information about the current chat modes like subscribers only mode</string>
    <string name="preference_streaminfo_key" translatable="false">show_streaminfo</string>
    <string name="preference_streaminfo_title">Show stream information</string>
    <string name="preference_streaminfo_summary">Displays live status and viewer count</string>
    <string name="preference_notification_key" translatable="false">notification_key</string>
    <string name="preference_notification_title">Show mention notifications</string>
    <string name="preference_notification_summary">Creates notifications when mentioned while the app is in the background</string>
    <string name="preference_show_input_key" translatable="false">show_input_key</string>
    <string name="preference_show_input_title">Show input</string>
    <string name="preference_show_input_summary">Displays the input field to send messages</string>
    <string name="preference_dark_theme_key" translatable="false">enable_dark_mode</string>
    <string name="preference_show_timed_out_messages_key" translatable="false">show_timed_out_messages_key</string>
    <string name="preference_show_timed_out_messages_title">Show timed out messages</string>
    <string name="preference_animate_gifs_key" translatable="false">animate_gifs_key</string>
    <string name="preference_animate_gifs_title">Animate gifs</string>
    <string name="preference_line_separator_key" translatable="false">line_seperator_key</string>
    <string name="preference_line_separator_title">Separate messages with lines</string>
    <string name="preference_keep_screen_on_key" translatable="false">keep_screen_on_key</string>
    <string name="preference_keep_screen_on_title">Keep screen on</string>
    <string name="preference_font_size_key" translatable="false">font_size_key</string>
    <string name="preference_font_size_title">Font size</string>
    <string name="preference_suggestions_key" translatable="false">suggestions_key</string>
    <string name="preference_suggestions_title">Suggestions</string>
    <string name="preference_suggestions_summary">Choose which suggestions to show while typing</string>
    <string name="preference_load_message_history_title">Load message history on start</string>
    <string name="preference_load_message_history_key" translatable="false">load_message_history_key</string>
    <string name="preference_debug_mode_key" translatable="false">debug_mode_key</string>
    <string name="preference_debug_mode_title">Debug mode</string>
    <string name="preference_debug_mode_summary">Show debug analytics action in input bar and collect crash reports locally</string>
    <string name="preference_timestamp_format_key" translatable="false">timestamp_format_key</string>
    <string name="preference_timestamp_format_title">Timestamp format</string>
    <string name="preference_tts_key" translatable="false">tts_key</string>
    <string name="preference_tts_title">Enable TTS</string>
    <string name="preference_tts_summary">Reads out messages of the active channel</string>
    <string name="preference_tts_queue_key" translatable="false">tts_queue_key</string>
    <string name="preference_tts_queue_title">Message queue mode</string>
    <string name="preference_tts_queue_add">Plays every message using a queue</string>
    <string name="preference_tts_queue_flush">Plays only newest message</string>
    <string name="preference_tts_message_format_message">Only reads out message</string>
    <string name="preference_tts_message_format_combined">Reads out user and message</string>
    <string name="preference_tts_message_format_key" translatable="false">tts_message_format_key</string>
    <string name="preference_tts_message_format_title">Message format mode</string>
    <string name="preference_tts_message_ignore_url_message">Ignores URLs in TTS</string>
    <string name="preference_tts_message_ignore_url_key" translatable="false">tts_message_ignore_url</string>
    <string name="preference_tts_message_ignore_url_title">Ignore URLs</string>
    <string name="preference_tts_message_ignore_emote_message">Ignores emotes and emojis in TTS</string>
    <string name="preference_tts_message_ignore_emote_key" translatable="false">tts_message_ignore_emote</string>
    <string name="preference_tts_message_ignore_emote_title">Ignore emotes</string>
    <string name="preference_tts_header">TTS</string>
    <string name="preference_tts_force_english_key" translatable="false">tts_force_english_key</string>
    <string name="preference_tts_force_english_title">Force language to English</string>
    <string name="preference_tts_force_english_summary">Force TTS voice language to English instead of system default</string>
    <string name="preference_uploader_header">Media uploader</string>
    <string name="preference_uploader_configure_title">Configure uploader</string>
    <string name="preference_uploader_recent_uploads_title">Recent uploads</string>
    <string name="preference_tts_user_ignore_list_title">User ignore list</string>
    <string name="preference_tts_user_ignore_list_key" translatable="false">tts_user_ignore_list_key</string>
    <string name="preference_tts_user_ignore_list_summary">List of users/accounts that will be ignored</string>
    <string name="preference_rm_host_title">Custom recent messages host</string>
    <string name="preference_fetch_streams_key" translatable="false">fetch_streams_key</string>
    <string name="preference_fetch_streams_title">Fetch stream information</string>
    <string name="preference_fetch_streams_summary">Periodically fetches stream information of open channels. Required to start embedded stream.</string>
    <string name="preference_retain_webview_title">Prevent stream reloads</string>
    <string name="preference_retain_webview_summary">Enables experimental prevention of stream reloads after orientation changes or re-opening DankChat.</string>
    <string name="preference_custom_login_title">Custom login</string>
    <string name="preference_retain_webview_new_key" translatable="false">retain_webview_new_key</string>
    <string name="preference_pip_key" translatable="false">pip_key</string>
    <string name="preference_pip_title">Enable picture-in-picture mode</string>
    <string name="preference_pip_summary">Allows streams to continue playing while the app is in the background</string>
    <string name="pattern">Pattern</string>
    <string name="case_sensitive">Case-sensitive</string>
    <string name="enabled">Enabled</string>
    <string name="create_notification">Notification</string>
</resources>