<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_suggestions_key"
        android:summary="@string/preference_suggestions_summary"
        android:title="@string/preference_suggestions_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_animate_gifs_key"
        android:title="@string/preference_animate_gifs_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_load_message_history_key"
        android:title="@string/preference_load_message_history_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_show_timed_out_messages_key"
        android:summary="@string/preference_show_timed_out_messages_summary"
        android:title="@string/preference_show_timed_out_messages_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_timestamp_key"
        android:title="@string/preference_timestamp_title" />

    <ListPreference
        android:defaultValue="HH:mm"
        android:entries="@array/timestamp_formats"
        android:entryValues="@array/timestamp_formats"
        android:key="@string/preference_timestamp_format_key"
        android:title="@string/preference_timestamp_format_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_roomstate_key"
        android:summary="@string/preference_roomstate_summary"
        android:title="@string/preference_roomstate_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/preference_streaminfo_key"
        android:summary="@string/preference_streaminfo_summary"
        android:title="@string/preference_streaminfo_title" />
</PreferenceScreen>