<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preference_debug_mode_key"
        android:summary="@string/preference_debug_mode_summary"
        android:title="@string/preference_debug_mode_title" />

    <PreferenceCategory android:title="@string/preference_tts_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_tts_key"
            android:summary="@string/preference_tts_summary"
            android:title="@string/preference_tts_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_queue_key"
            android:summaryOff="@string/preference_tts_queue_flush"
            android:summaryOn="@string/preference_tts_queue_add"
            android:title="@string/preference_tts_queue_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_message_format_key"
            android:summaryOff="@string/preference_tts_message_format_message"
            android:summaryOn="@string/preference_tts_message_format_combined"
            android:title="@string/preference_tts_message_format_title" />
    </PreferenceCategory>

</PreferenceScreen>