<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/preference_uploader_header"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/preference_uploader_key"
            android:title="@string/preference_uploader_configure_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/preference_uploader_recent_uploads_key"
            android:title="@string/preference_uploader_recent_uploads_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_tts_header"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/preference_tts_key"
            android:summary="@string/preference_tts_summary"
            android:title="@string/preference_tts_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_queue_key"
            android:summaryOff="@string/preference_tts_queue_flush"
            android:summaryOn="@string/preference_tts_queue_add"
            android:title="@string/preference_tts_queue_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_message_format_key"
            android:summaryOff="@string/preference_tts_message_format_message"
            android:summaryOn="@string/preference_tts_message_format_combined"
            android:title="@string/preference_tts_message_format_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_force_english_key"
            android:summary="@string/preference_tts_force_english_summary"
            android:title="@string/preference_tts_force_english_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_message_ignore_url_key"
            android:title="@string/preference_tts_message_ignore_url_title"
            app:iconSpaceReserved="false"
            android:summary="@string/preference_tts_message_ignore_url_message" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_message_ignore_emote_key"
            android:title="@string/preference_tts_message_ignore_emote_title"
            app:iconSpaceReserved="false"
            android:summary="@string/preference_tts_message_ignore_emote_message" />
        <Preference
            android:dependency="@string/preference_tts_key"
            android:key="@string/preference_tts_user_ignore_list_key"
            android:summary="@string/preference_tts_user_ignore_list_summary"
            android:title="@string/preference_tts_user_ignore_list_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>