<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/preference_fetch_streams_key"
        android:summary="@string/preference_fetch_streams_summary"
        android:title="@string/preference_fetch_streams_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:dependency="@string/preference_fetch_streams_key"
        android:key="@string/preference_streaminfo_key"
        android:summary="@string/preference_streaminfo_summary"
        android:title="@string/preference_streaminfo_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:dependency="@string/preference_fetch_streams_key"
        android:key="@string/preference_retain_webview_new_key"
        android:summary="@string/preference_retain_webview_summary"
        android:title="@string/preference_retain_webview_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="@string/preference_retain_webview_new_key"
        android:key="@string/preference_pip_key"
        android:summary="@string/preference_pip_summary"
        android:title="@string/preference_pip_title"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />
</PreferenceScreen>
