<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_add"
		android:icon="@drawable/ic_add_box_24dp"
		android:title="@string/add_channel"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/menu_login"
		android:title="@string/login"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/menu_remove"
		android:title="@string/remove_channel"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_reload_emotes"
		android:title="@string/reload_emotes"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_reconnect"
		android:title="@string/reconnect"
		app:showAsAction="never" />

	<item
		android:id="@+id/menu_clear"
		android:title="@string/clear_chat"
		app:showAsAction="never" />
</menu>